--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,7 +165,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #workwrap {	
-	background: url(../img/work.jpg) no-repeat center top;
+	background: url(../img/work/asabg.jpg) no-repeat center top;
 	margin-top: -70px;
 	padding-top: 220px;
 	text-align:center;
@@ -234,7 +234,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 /*Needed a quick fix to center my images on the project pages because this gurl's just tryna get her portfolio done in time */
-
+/*
 .fix{
 	position:relative;
 	width:800px;
@@ -248,6 +248,7 @@ h1, h2, h3, h4, h5, h6 {
 	margin-left:-95px;
 	margin-right: 35px;
 } 
+*/
 
 .graph{
 	position:relative;
