--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ h1, h2, h3, h4, h5, h6 {
 	color: #83bd46;
 	/* #1abc9c; */
 	background-color: transparent;
-	border-bottom: 2px solid #83bd46;;
+	/*border-bottom: 2px solid #83bd46;; */
 }
 
 
